test/memory/shannon/memmaxExceeds.good
memmaxExceeds.chpl:5: error: Exceeded memory limit
